Initial call to root transaction
Signed-off-by: Peter  Robinson <drinkcoffee@eml.cc>